--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@ main {
     align-content: center;
 }
 
+body {
+    background-color: #f0f0f0;
+    transition: background-color 0.3s ease;
+}
+
+
 form {
     padding: 16px;
     display: flex;
@@ -14,6 +20,10 @@ form {
     justify-content: space-evenly;
 }
 
+.background-buttons {
+    display: flex;
+    justify-content: right;
+}
 .action-container {
     display: flex;
     justify-content: left;
@@ -33,3 +43,4 @@ form {
 li {
     border-bottom: 1px solid;
 }
+
